fix: #52258 修改文档
